Raggruppa Verbi Sfusi

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -142,6 +142,9 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21700   |           | gruppo_spingere              | == Spingere e Tirare
 // -----------------------------------------------------------------------------
 | 21800   |           | gruppo_attaccare             | == Attaccare e Simili
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+| 29999   |           | gruppo_sfusi                 | == Verbi Sfusi
 // =============================================================================
 | 30000   |           | comandi_comandi_domande      | == Verbi di Domande
 // -----------------------------------------------------------------------------
