--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -1,7 +1,7 @@
 
 = Doxter: Note di Lavoro
 Tristano Ajmone <tajmone@gmail.com>
-:revdate: 2018-11-09
+:revdate: 2018-11-10
 :lang: it
 // TOC Settings:
 :toc: left
@@ -107,7 +107,7 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 // =============================================================================
 | 20000   |           | comandi_gioco                | == Verbi di Gioco
 // -----------------------------------------------------------------------------
-| 20100   |           | gruppo_accendi               | == Verbi di Gioco
+| 20100   |           | gruppo_accendi               | == Accensione e Spegnimento
 // -----------------------------------------------------------------------------
 | 20200   |           | gruppo_apri                  | == Apertura e Chiusura
 // -----------------------------------------------------------------------------
@@ -142,6 +142,14 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 | 21700   |           | gruppo_spingere              | == Spingere e Tirare
 // -----------------------------------------------------------------------------
 | 21800   |           | gruppo_attaccare             | == Attaccare e Simili
+// -----------------------------------------------------------------------------
+| 21900   |           | gruppo_leggere               | == Leggere e Scrivere
+// -----------------------------------------------------------------------------
+| 22000   |           | gruppo_bruciare              | == Bruciare
+// -----------------------------------------------------------------------------
+| 22100   |           | gruppo_usare                 | == Usare
+// -----------------------------------------------------------------------------
+| 22200   |           | gruppo_pensare               | == Pensare
 // -----------------------------------------------------------------------------
 // -----------------------------------------------------------------------------
 | 29999   |           | gruppo_sfusi                 | == Verbi Sfusi
