--- a/alanlib_ita/lib_verbi.asciidoc
+++ b/alanlib_ita/lib_verbi.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Verbi
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.30-Alpha, 2018-11-10: Alan 3.0beta6
+v0.7.31-Alpha, 2018-11-10: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_verbs.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -115,6 +115,7 @@ Il significato delle lettere nelle ultime quattro colonne è il seguente:
 | esamina            | guarda, descrivi, osserva, X | esamina (ogg)                          |     | 1 | {X} |
 | gioca_con          |                              | gioca con (ogg)                        |     | 1 | {X} |
 | gratta             |                              | gratta (ogg)                           |     | 1 | {X} |
+| grida              | strilla, urla                | grida                                  |     | 0 |     |
 | guarda             | L                            | guarda                                 |     | 0 |     |
 | guarda_dietro      |                              | guarda dietro (bulk)                   |     | 1 |     |
 | guarda_in          |                              | guarda in (cont)                       |     | 1 |     |
@@ -845,6 +846,7 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:
 * `dormi`
 * `gioca_con`
 * `gratta`
+* `grida`
 * `guida`
 * `inventario`
 * `lega`
@@ -876,6 +878,8 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:
 ==== gioca_con
 
 ==== gratta
+
+==== grida
 
 ==== guida
 
@@ -948,7 +952,6 @@ italiano del modulo dei verbi.
 | shake              |                                    | shake (obj)                       | 1 | {x}
 | shoot (at)         |                                    | shoot at (target)                 | 1 |
 | shoot_with         |                                    | shoot (target) with (weapon)      | 2 |
-| shout              | scream, yell                       | shout                             | 0 |
 | show               | reveal                             | show (obj) to (act)               | 2 | {x}
 | squeeze            |                                    | squeeze (obj)                     | 1 | {x}
 | stand_on           |                                    | stand on (surface)                | 1 |
@@ -1201,6 +1204,8 @@ Finisci di trasformare commenti in documentazione Doxter:
 * [ ] Descrizione `gioca_con`.
 
 * [ ] Descrizione `gratta`.
+
+* [ ] Descrizione `grida`.
 
 * [ ] Descrizione `guida`.
 
