--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.18-Alpha, 2018-11-10: Alan 3.0beta6
+v0.7.19-Alpha, 2018-11-10: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -91,6 +91,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN entrare.                  ---> enter
   CAN esaminare.                ---> examine      (+ check, inspect, observe, x)
   CAN giocare_con.              ---> play_with
+  CAN girare.                   ---> turn (+ rotate)
   CAN grattare.                 ---> scratch
   CAN gridare.                  ---> shout        (+ scream, yell)
   CAN guardare.                 ---> look         (+ gaze, peek)
@@ -301,7 +302,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
 --CAN switch. --------------------> ** VERBO ELIMINATO **
 --CAN switch_on. -----------------> ** VERBO ELIMINATO **
 --CAN switch_off. ----------------> ** VERBO ELIMINATO **
-  CAN turn.        -- (+ rotate)
 --------------------------------------------------------------------------------
 
 
