--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -151,6 +151,8 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 // -----------------------------------------------------------------------------
 | 22200   |           | gruppo_pensare               | == Pensare
 // -----------------------------------------------------------------------------
+| 22300   |           | gruppo_entrare               | == Entrare e Uscire
+// -----------------------------------------------------------------------------
 // -----------------------------------------------------------------------------
 | 29999   |           | gruppo_sfusi                 | == Verbi Sfusi
 // =============================================================================
