Knock + Lift + Follow
Translate verbs:
- `knock`       to `bussa`
- `knock_error` to `bussa_errore`
- `lift`        to `solleva`
- `follow`      to `segui`

Translate verb restriction attributes:
- `lift` to `sollevare`

Translate verb response attributes:
- `check_obj_weight_sg`/`pl` to `ogg1_troppo_pesante_sg`/`pl`

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.asciidoc
@@ -139,7 +139,7 @@ Questo documento annota l'ordine dei pesi utilizzati in ciascun modulo della lib
 // -----------------------------------------------------------------------------
 | 21600   |           | gruppo_nuotare               | == Nuotare e Tuffarsi
 // -----------------------------------------------------------------------------
-| 21700   |           | gruppo_spingere              | == Spingere e Tirare
+| 21700   |           | gruppo_spingere              | == Spingere, Tirare e Sollevare
 // -----------------------------------------------------------------------------
 | 21800   |           | gruppo_attaccare             | == Attaccare e Simili
 // -----------------------------------------------------------------------------
