--- a/alanlib_ita/lib_verbi.asciidoc
+++ b/alanlib_ita/lib_verbi.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Verbi
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.35-Alpha, 2018-11-11: Alan 3.0beta6
+v0.7.36-Alpha, 2018-11-12: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_verbs.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -151,6 +151,7 @@ Il significato delle lettere nelle ultime quattro colonne è il seguente:
 | metti_su           |                              | metti (ogg) su (superficie)            |     | 2 | {X} |
 | metti_vicino       |                              | metti (ogg) vicino a (bulk)            |     | 2 | {X} |
 | mordi              |                              | mordi (ogg)                            |     | 1 | {X} |
+| mostra             |                              | mostra (ogg) a (png)                   |     | 2 | {X} |
 | nuota              |                              | nuota                                  |     | 0 |     |
 | nuota_in           |                              | nuota in (liq)                         |     | 1 |     |
 | parla              |                              | parla                                  |     | 0 |     |
@@ -905,6 +906,7 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:
 * `lega`
 * `lega_a`
 * `libera`
+* `mostra`
 * `prega`
 * `rifai`
 * `scava`
@@ -948,6 +950,8 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:
 ==== lega_a
 
 ==== libera
+
+==== mostra
 
 ==== prega
 
@@ -1003,7 +1007,6 @@ italiano del modulo dei verbi.
 | rub                |                                    | rub (obj)                         | 1 | {x}
 | search             |                                    | search (obj)                      | 1 | {x}
 | shake              |                                    | shake (obj)                       | 1 | {x}
-| show               | reveal                             | show (obj) to (act)               | 2 | {x}
 | squeeze            |                                    | squeeze (obj)                     | 1 | {x}
 | stand_on           |                                    | stand on (surface)                | 1 |
 |=======================================================================================================
@@ -1284,6 +1287,8 @@ Finisci di trasformare commenti in documentazione Doxter:
 * [ ] Descrizione `lega_a`.
 
 * [ ] Descrizione `libera`.
+
+* [ ] Descrizione `mostra`.
 
 * [ ] Descrizione `prega`.
 
